#IMPLEMENT [api,client]: downstream repos with different local settings for can be registered for an existing remote on the server.
